// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Responsive font sizes 1`] = `
.emotion-0 {
  font-size: 15px;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    font-size: 20px;
  }
}

.emotion-0:last-child {
  margin-bottom: 0;
}

<p
  className="emotion-0 emotion-1"
  fontSize={
    Array [
      15,
      20,
    ]
  }
>
  Responsive font size
</p>
`;

exports[`Responsive line heights 1`] = `
.emotion-0 {
  line-height: 15px;
}

@media screen and (min-width:40em) {
  .emotion-0 {
    line-height: 20px;
  }
}

.emotion-0:last-child {
  margin-bottom: 0;
}

<p
  className="emotion-0 emotion-1"
>
  Responsive font size
</p>
`;
